@@ -28,6 +28,7 @@ Default Qt Client
 - Fixed OPUS DTX mode sending too big packets when variable bitrate mode (VBR) was disabled
 - Fixed ask to use default sounds pack at every language change (will be asked one last time)
 Android Client
+- Replaced the old turn up/down buttons for speaker volume and microphone gain with new brand sliders that has a lot of advantages over the buttons, and looks more beautiful!
 - Added popup menu actions in Server List dialog
 - Added "Message" and "User properties" user menu actions in channel list tab
 - Ability to export each server in to a .tt file separately
